# floatconv

./: Cargo.toml  LICENSE  test  test-targets  update-asm
asm-output/aarch64-unknown-linux-gnu/: emulated::i128_to_f64_round  emulated::i128_to_f64_truncate  emulated::i32_to_f64  emulated::i64_to_f64_round  emulated::i64_to_f64_truncate  emulated::u128_to_f64_round  emulated::u128_to_f64_truncate  emulated::u32_to_f64  emulated::u64_to_f64_round  emulated::u64_to_f64_truncate  fast-f32_to_i32  fast-f32_to_i64  fast-f32_to_u32  fast-f32_to_u64  fast-f64_to_i32  fast-f64_to_i64  fast-f64_to_u32  fast-f64_to_u64  fast-i128_to_f32_round  fast-i128_to_f32_truncate  fast-i128_to_f64  fast-i128_to_f64_round  fast-i128_to_f64_truncate  fast-i16_to_f32  fast-i16_to_f32_round  fast-i16_to_f64  fast-i16_to_f64_round  fast-i32_to_f32  fast-i32_to_f32_round  fast-i32_to_f32_truncate  fast-i32_to_f64  fast-i64_to_f32  fast-i64_to_f32_round  fast-i64_to_f32_truncate  fast-i64_to_f64  fast-i64_to_f64_round  fast-i64_to_f64_truncate  fast-i8_to_f32  fast-i8_to_f32_round  fast-i8_to_f64  (+111 more)
asm-output/arm-unknown-linux-gnueabihf/: emulated::i128_to_f64_round  emulated::i128_to_f64_truncate  emulated::i32_to_f64  emulated::i64_to_f64_round  emulated::i64_to_f64_truncate  emulated::u128_to_f64_round  emulated::u128_to_f64_truncate  emulated::u32_to_f64  emulated::u64_to_f64_round  emulated::u64_to_f64_truncate  fast-f64_to_i32  (+99 more)
benches/: benchmark.rs
benchmark/: Cargo.toml  benchmark.rs
fuzz/: Cargo.toml
src/: emulated.rs  fast.rs  lib.rs  semi.rs  soft.rs  special.rs  test.rs
(+664 files in other folders)
